[package]
name = "litter-dox"
version = "0.1.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
prettyplease = "0.2.37"
proc-macro2 = "1.0"
regex = "1.12.3"
