[package]
name = "litter-dox"
version = "0.1.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
regex = { version = "1.12.3", default-features = false, features = [
    "std",
    "unicode",
] }
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "extra-traits",
    "parsing",
    "printing",
    "proc-macro",
] }
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0", default-features = false, features = [
    "proc-macro",
] }
